<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_post">Post</string>
    <string name="menu_search">Search</string>
    <string name="instruction">Input your text</string>
    <string name="reply">Reply</string>
    <string name="retweet">Retweet</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="remaining_count">remaining characters: </string>
    <string name="success_tweet">tweet posted successfully.</string>
    <string name="fail_tweet">tweet posted failed! </string>
    <string name="success_reply">reply successfully.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search People on Twitter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="nonesense">none</string>
    <string name="tweet_dialog_title">Input your tweet</string>
    <string name="cancel">Cancel</string>
    <string name="show_more_tweet">Show more tweets...</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_dialog_message">Do you want to delete this Tweet?</string>
    <!-- <string name="link"></string> -->
    <string name="location_off">Location: Off</string>
    <string name="location_on">Location: On</string>
    <string name="gps_no_fix">The GPS location is not fixed.</string>
    <string name="rate_limit_reached">Too frequent requests!</string>
    <string name="latitute">latitute</string>
    <string name="longitute">longitute</string>
    <string name="radius">radius</string>
    <string name="location">Location</string>
    <string name="radiusKM">radius/km</string>
    <string name="title_activity_search_list">SearchList</string>
    <string name="title_activity_map">Google Map</string>

</resources>