<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latituteTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"
            android:layout_marginLeft="8dp"
            android:text="@string/latitute" />

        <EditText
            android:id="@+id/latitute"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:inputType="numberDecimal" >
            <requestFocus />
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/longituteTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="17sp"
            android:layout_marginLeft="8dp"
            android:text="@string/longitute" />
	    <EditText
	        android:id="@+id/longitude"
	        android:inputType="numberDecimal"	
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
		/>
	 </LinearLayout>
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/radiusTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/radiusKM"
            android:textSize="17sp"
            android:layout_marginLeft="8dp" />

	        <EditText
	        android:id="@+id/radius"
	        android:inputType="numberDecimal"	
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="4dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="16dp"
	        />
      </LinearLayout>
</LinearLayout>